...
            color = DesignSystemThemeImpl.designSystemColor.contentDefaultLevel0,
            style = DesignSystemThemeImpl.typeScale.displayRegularXL,
        )
    }
}

private const val BackContentDescription = "뒤로 가기"

@Preview(showBackground = true, widthDp = 390)
@Composable
private fun NyummyScreenHeaderPreview() {
    DesignSystemTheme {
        NyummyScreenHeader(
...
